@@ -61,6 +61,7 @@ bankruptcy_decisions = {
 	bankruptcy_seek_bailout_from_biggest_influencer = {
 
 		available = {
+			is_subject = no
 			custom_trigger_tooltip = {
 				tooltip = "has_foreign_influence"
 				check_variable = { influence_array^0 > 0 }
@@ -119,6 +120,7 @@ bankruptcy_decisions = {
 	bankruptcy_seek_bailout_from_second_biggest_influencer = {
 
 		available = {
+			is_subject = no
 			custom_trigger_tooltip = {
 				tooltip = "has_foreign_influence"
 				check_variable = { influence_array^1 > 0 }
@@ -188,6 +190,7 @@ bankruptcy_decisions = {
 		}
 
 		available = {
+			is_subject = no
 			FROM = { NOT = { has_war_with = ROOT } }
 			FROM = { has_opinion = { target = ROOT value > 0 } }
 			if = {
@@ -238,6 +241,60 @@ bankruptcy_decisions = {
 		}
 
 	}
+	
+	bankruptcy_seek_bailout_from_overlord = {
+	
+		visible = {
+			is_subject = yes
+		}
+	
+		available = {
+			if = {
+				limit = { is_ai = no }
+				custom_trigger_tooltip = {
+					tooltip = treasury_less_than_5
+					check_variable = { treasury < 5 }
+				}
+			}
+			is_subject = yes
+			NOT = { has_decision = bankruptcy_seek_bailout_from_imf }
+			overlord = { NOT = { has_dynamic_modifier = { modifier = very_high_interest_country_modifiers } } }
+		}
+		
+		days_re_enable = 360
+		
+		days_remove = 7
+
+		complete_effect = {
+			if = { limit = { is_ai = yes }
+				add_political_power = -50
+			}
+			else = {
+				add_political_power = -100
+			}
+			set_temp_variable = { debt_bailout_temp = debt }
+			multiply_temp_variable = { debt_bailout_temp = 0.50 }
+			set_variable = { debt_bailout = debt_bailout_temp }
+			clamp_variable = { var = debt_bailout min = 1 }
+			round_variable = debt_bailout
+			custom_effect_tooltip = bankruptcy_seek_bailout_from_overlord_tt
+			overlord = { country_event = { id = bankruptcy.5 hours = 3  } }
+		}
+		
+		ai_will_do = {
+			factor = 800
+			modifier = {
+				factor = 0
+				check_variable = { interest_rate < 15 }
+			}
+			modifier = {
+				factor = 0
+				has_political_power < 0
+			}
+		}
+			
+	
+	}
 
 	bankruptcy_seek_bailout_from_imf = {
 
@@ -256,6 +313,7 @@ bankruptcy_decisions = {
 			NOT = { has_decision = bankruptcy_seek_bailout_from_biggest_influencer }
 			NOT = { has_decision = bankruptcy_seek_bailout_from_second_biggest_influencer }
 			NOT = { has_decision = bankruptcy_seek_bailout_from_neighbour }
+			NOT = { has_decision = bankruptcy_seek_bailout_from_overlord }
 		}
 
 		fixed_random_seed = no
