@@ -1874,7 +1874,7 @@ country_event = {
 	#We have no help to offer
 	option = {
 		name = bankruptcy.2.b
-		log = "[GetDateText]: [This.GetName]: bankruptcy.3.b executed"
+		log = "[GetDateText]: [This.GetName]: bankruptcy.2.b executed"
 		ai_chance = { factor = 0 }
 		FROM = { country_event = { id = bankruptcy.4 hours = 3  } }
 		ai_chance = {
@@ -1963,6 +1963,62 @@ country_event = {
 		add_opinion_modifier = { modifier = did_not_support_us target = FROM }
 		clear_variable = debt_bailout
 		ai_chance = { factor = 100 }
+	}
+}
+
+##Bailout Requested from overlord###
+country_event = {
+	id = bankruptcy.5
+	title = bankruptcy.5.t
+	desc = bankruptcy.5.d
+	is_triggered_only = yes
+	picture = GFX_stock_market
+
+	#Give it
+	option = {
+		name = bankruptcy.5.a
+		log = "[GetDateText]: [This.GetName]: bankruptcy.5.a executed"
+		set_temp_variable = { our_cost = FROM.debt_bailout }
+		multiply_temp_variable = { our_cost = 0.5 }
+		round_variable = our_cost
+		subtract_from_variable = { treasury = our_cost }
+		custom_effect_tooltip = bankruptcy_bailout_sum_TT
+		custom_effect_tooltip = bankruptcy_bailout_influence_neighbour_TT
+		FROM = { news_event = { id = News_bankruptcy.3 hours = 3  } }
+		ai_chance = {
+			factor = 90
+			modifier = {
+				factor = 0.8
+				check_variable = { interest_rate > 5 }
+				check_variable = { interest_rate < 10 }
+			}
+			modifier = {
+				factor = 0.25
+				check_variable = { interest_rate > 10 }
+			}
+			modifier = {
+				factor = 0
+				check_variable = { interest_rate > 15 }
+			}
+		}
+	}
+	#We have no help to offer
+	option = {
+		name = bankruptcy.3.b
+		log = "[GetDateText]: [This.GetName]: bankruptcy.5.b executed"
+		FROM = { country_event = { id = bankruptcy.4 hours = 3  } }
+		ai_chance = {
+			factor = 10
+			modifier = {
+				factor = 2.5
+				check_variable = { interest_rate > 5 }
+				check_variable = { interest_rate < 10 }
+			}
+			modifier = {
+				factor = 7.5
+				check_variable = { interest_rate > 10 }
+			}
+		}
 	}
 }
 
