@@ -273,8 +273,10 @@
  bankruptcy_seek_bailout_from_biggest_influencer_desc: "We can ask our large economic backers to bail out some of our debt, and also forgive some of it. Naturally, this will grant the bailer a lot of influence over us"
  bankruptcy_seek_bailout_from_second_biggest_influencer: "Ask Debt Bailout from [?var:FROM.influence_array^1.GetNameWithFlag]"
  bankruptcy_seek_bailout_from_second_biggest_influencer_desc: "We can ask our large economic backers to bail out some of our debt, and also forgive some of it. Naturally, this will grant the bailer a lot of influence over us"
- bankruptcy_seek_bailout_from_neighbour: "Ask Debt Bailout from [FROM.GetNameWithFlag]"
+ bankruptcy_seek_bailout_from_neighbour: "Ask Debt Bailout from Our Neighbour [FROM.GetNameWithFlag]"
  bankruptcy_seek_bailout_from_neighbour_desc: "Some of the money we owe comes from our richer neighbour [FROM.GetNameDef]. As they are our friendly neighbour, perhaps we should ask them to bail us out?"
+ bankruptcy_seek_bailout_from_overlord: "Ask Debt Bailout from Our Overlord [?overlord.GetNameWithFlag]"
+ bankruptcy_seek_bailout_from_overlord_desc: "As a lot of our politics is controlled by our overlord, it only makes sense that they are also responsible for some of our finances. We need to ask them to help us out"
  bankruptcy_seek_bailout_from_imf: "Ask Debt Bailout from the IMF"
  bankruptcy_seek_bailout_from_imf_desc: "As a last resort we can as the IMF to give us debt relief. As the IMF represents multitude of financial institutions across the globe, they are very strict with their money usage. They will demand us to make changes to our financial policies to make sure that we can pay our debts in the future."
  bankruptcy_incoming_collapse: "Incoming Financial Collapse"
@@ -283,9 +285,10 @@
  bankruptcy_default_on_debts_desc: "By defaulting on our debts, we will signal our debtors that there is no realistic way for us to pay all of our debt. This is a last resort option for a heavily indebted country to solve its debt crisis. Usually some of our debt gets settled (forgiven) by our debtors, as they usually prefer to get some of their money than lose everything in a total collapse. This however doesn't come without political concessions. Defaulting our debts and not compensating our debtors in any way can be very dangereous."
 
  cheap_loans_from_imf_tt: "Our §YDebt§! will increase by $§R[?debt_addition|0]§! §Ybillion§! but our §YInterest Rate§! will be reduced by §G-2%§! for a year"
- bankruptcy_seek_bailout_from_biggest_influencer_tt: "We will ask [?var:FROM.influence_array^0.GetNameDef] to handle §Y$[?debt_bailout_temp|0] billion§! of our debt. They will pay three quarters of the sum and the rest will be settled. [?var:FROM.influence_array^0.GetNameDef]'s willingess to pay the debt will depend on their own financial situation.\n\nIf they agree to the deal, they will get §R20%§! influence on us!\n\n"
- bankruptcy_seek_bailout_from_second_biggest_influencer_tt: "We will ask [?var:FROM.influence_array^1.GetNameDef] to handle §Y$[?debt_bailout_temp|0] billion§! of our debt. They will pay two thirds of the sum and the rest will be settled. [?var:FROM.influence_array^1.GetNameDef]'s willingess to pay the debt will depend on their own financial situation.\n\nIf they agree to the deal, they will get §R15%§! influence on us!\n\n"
- bankruptcy_seek_bailout_from_neighbour_tt: "We will ask [?FROM.GetNameDef] to handle §Y$[?debt_bailout_temp|0] billion§! of our debt. They will pay half of the sum and the rest will be settled. [FROM.GetNameDef]'s willingess to pay the debt will depend on their own financial situation.\n\nIf they agree to the deal, they will get §R10%§! influence on us!\n\n"
+ bankruptcy_seek_bailout_from_biggest_influencer_tt: "We will ask [?var:FROM.influence_array^0.GetNameDef] to handle §Y$[?debt_bailout_temp|0] billion§! of our debt. They will pay three quarters of the sum and the rest will be settled. [?var:FROM.influence_array^0.GetNameDef]'s willingess to pay the debt will depend on their own financial situation.\n\nIf they agree to the deal, they will get §R15%§! influence on us!\n\n"
+ bankruptcy_seek_bailout_from_second_biggest_influencer_tt: "We will ask [?var:FROM.influence_array^1.GetNameDef] to handle §Y$[?debt_bailout_temp|0] billion§! of our debt. They will pay two thirds of the sum and the rest will be settled. [?var:FROM.influence_array^1.GetNameDef]'s willingess to pay the debt will depend on their own financial situation.\n\nIf they agree to the deal, they will get §R10%§! influence on us!\n\n"
+ bankruptcy_seek_bailout_from_neighbour_tt: "We will ask [FROM.GetNameDef] to handle §Y$[?debt_bailout_temp|0] billion§! of our debt. They will pay half of the sum and the rest will be settled. [FROM.GetNameDef]'s willingess to pay the debt will depend on their own financial situation.\n\nIf they agree to the deal, they will get §R5%§! influence on us!\n\n"
+ bankruptcy_seek_bailout_from_overlord_tt: "We will ask [?overlord.GetNameDef] to handle §Y$[?debt_bailout_temp|0] billion§! of our debt. They will pay half of the sum and the rest will be settled. [?overlord.GetNameDef]'s willingess to pay the debt will depend on their own financial situation.\n\nIf they agree to the deal, they will get §R5%§! influence on us!\n\n"
  bankruptcy_seek_bailout_from_imf_tt: "We will contact the IMF and ask them to settle §Y$[?debt_bailout_temp|0] billion§! of our debt and give us a lower interest rate for a year. In return they will ask us to change our financial policies. §RDenying their demands will see us punished with a temporarily higher interest rate!§!\n\n"
  bankruptcy_seek_bailout_from_imf_low_gdp_per_capita_tt: "§RAs our GDP/C is lower than $5k, we will receive harsher demands than normal!§!"
  bankruptcy_incoming_collapse_complete_trigger: "Our §YInterest on Debt§! is lower than our §YGross Income§!"
@@ -347,26 +350,33 @@
  bankruptcy.1.a: "Grant [From.GetNameWithFlag] the bailout"
  bankruptcy.1.b: "Sorry, we can't afford it"
  bankruptcy_bailout_sum_TT: "Treasury: §R-$[?our_cost|0] billions§!\n"
- bankruptcy_bailout_influence_TT: "[From.GetNameWithFlag]: [Root.GetNameWithFlag] §YInfluence§! increases by §G20%§!"
+ bankruptcy_bailout_influence_TT: "[From.GetNameWithFlag]: [Root.GetNameWithFlag] §YInfluence§! increases by §G15%§!"
 
  #offer it? - 2nd biggest influencer
  bankruptcy.2.t: "[From.GetNameWithFlag] asks for a debt bailout"
  bankruptcy.2.d: "[From.GetName]'s debt problem has gotten so bad, they realistically have no chance of either paying it down or even meeting running interest payments. With the real possibility of a bankruptcy, it was under desperate circumstances that [From.GetAdjective] leader [From.GetLeader] had traveled to [Root.GetName] to plead for [Root.GetLeader]'s help.\n\n[From.GetNameWithFlag] is asking us to handle a debt portion of $[?FROM.debt_bailout|0] §Ybillion§! by paying two thirds of it and forgiving the rest. If we do it, it would calm other interational lenders, reducing drastically [From.GetName]'s lending costs, making their large debt manageable.\n\nThough we will lose money from doing this, they will seriously be in our debt, with our influence over them increasing significantly."
  bankruptcy.2.a: "Grant [From.GetNameWithFlag] the bailout"
  bankruptcy.2.b: "Sorry, we can't afford it"
- bankruptcy_bailout_influence_second_biggest_TT: "[From.GetNameWithFlag]: [Root.GetNameWithFlag] §YInfluence§! increases by §G15%§!"
+ bankruptcy_bailout_influence_second_biggest_TT: "[From.GetNameWithFlag]: [Root.GetNameWithFlag] §YInfluence§! increases by §G10%§!"
 
  #offer it? - Neighbour
  bankruptcy.3.t: "[From.GetNameWithFlag] asks for a debt bailout"
  bankruptcy.3.d: "[From.GetName]'s debt problem has gotten so bad, they realistically have no chance of either paying it down or even meeting running interest payments. With the real possibility of a bankruptcy, it was under desperate circumstances that [From.GetAdjective] leader [From.GetLeader] had traveled to [Root.GetName] to plead for [Root.GetLeader]'s help.\n\n[From.GetNameWithFlag] is asking us to handle a debt portion of $[?FROM.debt_bailout|0] §Ybillion§! by paying half of it and forgiving the rest. If we do it, it would calm other interational lenders, reducing drastically [From.GetName]'s lending costs, making their large debt manageable.\n\nThough we will lose money from doing this, they will seriously be in our debt, with our influence over them increasing significantly."
  bankruptcy.3.a: "Grant [From.GetNameWithFlag] the bailout"
  bankruptcy.3.b: "Sorry, we can't afford it"
- bankruptcy_bailout_influence_neighbour_TT: "[From.GetNameWithFlag]: [Root.GetNameWithFlag] §YInfluence§! increases by §G10%§!"
+ bankruptcy_bailout_influence_neighbour_TT: "[From.GetNameWithFlag]: [Root.GetNameWithFlag] §YInfluence§! increases by §G5%§!"
 
  #event back for the one asking for the bailout
  bankruptcy.4.t: "[From.GetNameWithFlag] denies us bailout!"
  bankruptcy.4.d: "In yesterday's top level meeting in [From.GetName] between [From.GetLeader] and [Root.GetLeader], the [From.GetAdjective] were entirely unsympatethic to our needs, and refused to bail us out. While [From.GetName] didn't exactly owe us anything, their refusal has damaged our perception of them as a reliable partner."
  bankruptcy.4.a: "Ok"
+
+ #offer it? - Overlord
+ bankruptcy.5.t: "[From.GetNameWithFlag] asks for a debt bailout"
+ bankruptcy.5.d: "[From.GetName]'s debt problem has gotten so bad, they realistically have no chance of either paying it down or even meeting running interest payments. With the real possibility of a bankruptcy, it was under desperate circumstances that [From.GetAdjective] leader [From.GetLeader] had traveled to [Root.GetName] to plead for [Root.GetLeader]'s help.\n\n[From.GetNameWithFlag] is asking us to handle a debt portion of $[?FROM.debt_bailout|0] §Ybillion§! by paying half of it and forgiving the rest. If we do it, it would calm other interational lenders, reducing drastically [From.GetName]'s lending costs, making their large debt manageable.\n\nThough we will lose money from doing this, they will seriously be in our debt, with our influence over them increasing significantly."
+ bankruptcy.5.a: "Grant [From.GetNameWithFlag] the bailout"
+ bankruptcy.5.b: "Sorry, we can't afford it"
+ bankruptcy_bailout_influence_overlord_TT: "[From.GetNameWithFlag]: [Root.GetNameWithFlag] §YInfluence§! increases by §G5%§!"
 
  #Financial collapse stuff
  bankruptcy.10.t: "Opposition Demands Elections"
