@@ -15,6 +15,7 @@ Bugfixes:
 	- Game rules localisation fixes
 	- Corporate Tax Cost localisation clarification
 	- Denmark can now get planes from SOV/USA aka, denmark.4001
+	- Subjects can now ask for debt relief only from the IMF or their Overlord
 
 Content:
 	- USA, SOV, CHI, ENG, FRA, RAJ, JAP, ITA, SPR, PER, KOR, TAI, ISR, NKO, TUR, GER, UKR, BRA, PAK, EGY missile technology setup
